<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Color Trap</string>
    <string name="menu_subtitle">Players</string>

    <string name="new_game_ai">1</string>
    <string name="new_game_hotseat">2</string>

    <string name="font_default">GothamRnd-Book.otf</string>
    <string name="font_default_bold">GothamRnd-Bold.otf</string>
    <string name="font_default_light">GothamRnd-Light.otf</string>
    <string name="cd_player1">Player 1 game piece</string>
    <string name="cd_player2">Player 2 game piece</string>
    <string name="reset_button">reset</string>
    <string name="question_mark">\?</string>
    <string name="help_credits">Color Trap by Star Sky\nPuzzle piece assets by <u>J. Deveaux</u></string>
    <string name="help1">Move UP, DOWN, LEFT, or RIGHT. You can even jump over whitespace!</string>
    <string name="help2">To <b>win</b>, land on your opponent\'s <b>current tile color</b>, OR land on his head!</string>
    <string name="help3">Don\'t run out of places to move…</string>
    <string name="attribution_link">http://thenounproject.com/Julihan/</string>
    <string name="help_done">Got it</string>
    <string name="help_title">HOW TO PLAY</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>

</resources>
