<co.starsky.colortrap.view.SlidingRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/board_layout"
        style="@style/ColorTrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp" >

    <include
            layout="@layout/grid"
            android:id="@+id/gridview"
            />

    <co.starsky.colortrap.view.FontyTextView
            android:id="@+id/board_text"
            app:customFont="@string/font_default"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/secondary_text_light"
            android:layout_below="@id/gridview"
            android:layout_marginBottom="10dp"
            />

    <co.starsky.colortrap.view.FontyTextView
            style="@style/MenuButton.Small"
            android:id="@+id/board_reset"
            app:customFont="@string/font_default_light"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/secondary_text_light"
            android:text="@string/reset_button"
            android:background="@color/emerald"
            android:visibility="gone"
            android:textSize="@dimen/reset_text"
            />

    <ImageView android:id="@+id/animation_image"
               android:src="@drawable/piece1"
               android:contentDescription="@string/cd_player1"
               style="@style/PlayerPiece" />

    <ImageView android:id="@+id/animation_image2"
               android:src="@drawable/piece2"
               android:contentDescription="@string/cd_player2"
               style="@style/PlayerPiece"/>


</co.starsky.colortrap.view.SlidingRelativeLayout>