<?xml version="1.0" encoding="utf-8"?>

<co.starsky.colortrap.view.SlidingRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/ColorTrapLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <ImageView
            android:id="@+id/menu_text_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_title_image_height"
            android:src="@drawable/title3"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitEnd"
            android:layout_marginTop="10dp"
            />


    <View android:id="@+id/menu_filler"
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:layout_centerHorizontal="true"
          />

    <ImageView
            style="@style/MenuButton"
            android:id="@+id/button_new_computer"
            android:background="@color/sun_flower"
            android:layout_toLeftOf="@id/menu_filler"
            android:layout_centerVertical="true"
            android:src="@drawable/piece_black"
            android:contentDescription="@string/single_player"
            />

    <ImageView
            style="@style/MenuButton"
            android:id="@+id/button_new_hotseat"
            android:background="@color/watermelon"
            android:layout_toRightOf="@id/button_new_computer"
            android:layout_below="@id/button_new_computer"
            android:src="@drawable/piece_black2"
            android:contentDescription="@string/multiplayer"
            />

    <co.starsky.colortrap.view.FontyTextView
            style="@style/MenuButton.Small"
            android:id="@+id/button_help"
            app:customFont="@string/font_default"
            android:text="@string/question_mark"
            android:background="@color/river"
            android:layout_alignBottom="@id/button_new_hotseat"
            android:layout_alignLeft="@id/button_new_computer"
            android:textSize="@dimen/menu_help_text"
            />


    <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

</co.starsky.colortrap.view.SlidingRelativeLayout>